# GrooveBox-Rust-Egui-Macroquad-RodioFX

./: Cargo.toml  README.md
src/: app_state.rs  main.rs
src/gui/: bottom_panel.rs  layout.rs  mod.rs  top_panel.rs
src/state/: mod.rs  ui_state.rs
