[package]
name = "egui_macroquad_groovebox_rodio"
version = "0.1.0"
edition = "2024"


[dependencies]
egui-macroquad = { version = "0.17.3", default-features = false }
macroquad = { version = "0.4.14", default-features = false }
rfd = "0.17.2"
kira = "0.9"
hound = "3.5.1"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }

